# HuedInsteon

./: .gitignore  LICENSE  NOTICE  README.md  config.example.toml  plan.md  pyproject.toml
docs/: development.md  firmware.md  sonoff_bringup.md
firmware/: README.md
firmware/common/: hued_app.c  hued_app.h  hued_protocol.c  hued_protocol.h
firmware/single_light/: README.md  hued_variant.h
firmware/tests/: test_hued_firmware_core.c
firmware/three_endpoint/: README.md  hued_variant.h
firmware/ti_zstack/: README.md
firmware/ti_zstack/boards/sonoff_zbdongle_p/: README.md  SONOFF_ZBDONGLE_P.syscfg.json  zr_light.sonoff_zbdongle_p.syscfg.patch
firmware/ti_zstack/overlay/: README.md  hued_zstack_bridge.c  hued_zstack_bridge.h
scripts/: build_zstack_zr_light.py  hue_bridge.py  probe_sonoff_dongle.py  query_znp_version.py  start_zigbee_commissioning.py  zigbee_diag.py
src/huedinsteon/: __init__.py  adapters.py  bridge.py  cli.py  config.py  fake_adapters.py  insteon_pyinsteon.py  models.py  protocol.py  zigbee_serial.py
systemd/: huedinsteon.service
tests/: test_bridge.py  test_config.py  test_firmware_c.py  test_protocol.py
