# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "huedinsteon"
version = "0.1.0"
description = "Bridge Insteon lighting banks to Hue-visible Zigbee virtual lights."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
  "pyserial>=3.5",
]

[project.optional-dependencies]
hardware = [
  "pyinsteon>=1.6.4",
]
dev = [
  "pytest>=8.4.2",
]

[project.scripts]
huedinsteon = "huedinsteon.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
